rhbbk26/keycloak-admin-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak-admin
  namespace: keycloak
spec:
  host: kc-admin.apps.cluster-ft6nf.dynamic.redhatworkshops.io
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
